--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<img src="img/alexeyVyacheslavovich_800.png" class="imgEducators">
 							<div class="descriptionEducators">
 								<h4>🇸🇰Алексей Вячеславович</h4>
-								<p>Давно установлено, что читатель будет отвлекаться на удобочитаемое содержимое страницы при просмотре ее макета.</p>
+								<p>Самый лучший вожатый в нашем любимом лагере. Он всегда помогает и поддерживает нас. Делает наш досуг не забываем и очень интересны, даже если ему бы  ему за это довали чаполах. Всегда с нами делает и помогает в подготовке и предстовлении.</p>
 								<a href="https://vk.com/id124003506" target="_blank">VK</a>
 							</div>
 						</div>
@@ -84,7 +84,7 @@
 							<img src="img/kristinaDmitrievna_800.png" class="imgEducators">
 							<div class="descriptionEducators">
 								<h4>🇵🇱Кристина Дмитриевна</h4>
-								<p>Давно установлено, что читатель будет отвлекаться на удобочитаемое содержимое страницы при просмотре ее макета.</p>
+								<p>А вот Кристина Дмитриевна лучшая вожатая, во всей вселенной, и не только. Эта будущая лучшая учительница, по истории и общестознанию. Как и Алексей Вячеславович она помогала нам в репетициях и в создании (предметы для предстовления) и вообще во всей творческой работе.</p>
 								<a href="https://vk.com/k.timoshko" target="_blank">VK</a>
 							</div>
 						</div>
@@ -95,9 +95,8 @@
 						<div>
 							<img src="img/innaVasilievna_800.png" class="imgEducators">
 							<div class="descriptionEducators">
-								<!--''-->
 								<h4>🇺🇦Инна Васильевна</h4>
-								<p>Давно установлено, что читатель будет отвлекаться на удобочитаемое содержимое страницы при просмотре ее макета.</p>
+								<p>Наша воспитательница, которое сочинит стишок за один день и вообще целую сценку и отрывки для сценария, особенно это помогало нам во время всяких предстовлениях и выступлениях. Кстати она ведьма, она просто очень хороший воспитатель, что может с нами справиться.</p>
 								<a href="https://vk.com/id480613732" target="_blank">VK</a>
 							</div>
 						</div>
