--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
 								</div>
 							</div>
 
-							<div class="flex">
+							<!--<div class="flex">
 								<img src="img/adelina_800.png" class="imgSquad">
 								<div class="descriptionSquad">
-									<h4>🇦🇽Ангелина (Что нибудь)</h4>
+									<h4>🇦🇽Ангелина (—)</h4>
 									<p>—<!--'Как и с Юлей.'--></p>
 								</div>
-							</div>
+							</div>-->
 						</div>
 
 
@@ -153,7 +153,7 @@
 							<div class="flex">
 								<img src="img/karina_800.png" class="imgSquad">
 								<div class="descriptionSquad">
-									<h4>🇦🇩Карина (Что нибудь)</h4>
+									<h4>🇦🇩Карина (Большая плюшивая медведица)</h4>
 									<p>Ты когда-нибудь видел большого плюшевого мишку? Нет? А я вот да, и он даже живой, и она. Она очень дружилюбная, но ранимая, так-что не обижай мишек. Лучше поддерживай, помогай и она тебе ответит темже.</p>
 								</div>
 							</div>
@@ -180,7 +180,7 @@
 							<div class="flex">
 								<img src="img/adeline_800.png" class="imgSquad">
 								<div class="descriptionSquad">
-									<h4>🇦🇹Аделина (Что нибудь)</h4>
+									<h4>🇦🇹Аделина (Амаделия)</h4>
 									<p>Просто жизне-радостное солнышко, но нете дешёвки из 3 отряда, а солнышко которое обожёт тебя своими лучами радости, что всю свою оставшиюся, жалкую жизнь будешь лежать в коме.</p>
 								</div>
 							</div>
@@ -193,13 +193,13 @@
 								</div>
 							</div>
 
-							<div class="flex">
+							<!--<div class="flex">
 								<img src="img/sasha_800.png" class="imgSquad">
 								<div class="descriptionSquad">
 									<h4>🇧🇪Саша✌ (Баба Саша или Баба Шура)</h4>
 									<p>—</p>
 								</div>
-							</div>
+							</div>-->
 						</div>
 
 
@@ -207,18 +207,18 @@
 							<div class="flex">
 								<img src="img/tanya_800.png" class="imgSquad">
 								<div class="descriptionSquad">
-									<h4>🇩🇰Таня (Что нибудь)</h4>
+									<h4>🇩🇰Таня (Даст тебе платье)</h4>
 									<p>Кто куда, ну а она к 3 отряда. Есть даже чувтво, что она настолько дружилюбная и общительная, что подружилась со всеми в лагере, даже с поварами, но только Макс был раньше, этой девушки.</p>
 								</div>
 							</div>
 
-							<div class="flex">
+							<!--<div class="flex">
 								<img src="img/uly_800.png" class="imgSquad">
 								<div class="descriptionSquad">
 									<h4>🇧🇬~Юлия🍷🖤~ (Баб Юля, Казинак)</h4>
 									<p>—<!--'"Саша Юля, Юля Саша"—так обычно мы звали их, и даже не которые думали, что они сёстра, но нет. Они очень разные. Вот эта ...(абсолютно, нет мыслей. Прости но я стобой не больно да общался)'--></p>
 								</div>
-							</div>
+							</div>-->
 
 							<div class="flex">
 								<img src="img/stas_800.png" class="imgSquad">
