--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 								<img src="img/adelina_800.png" class="imgSquad">
 								<div class="descriptionSquad">
 									<h4>🇦🇽Ангелина (—)</h4>
-									<p>—<!--'Как и с Юлей.'--></p>
+									<p>—<!-'Как и с Юлей.'-></p>
 								</div>
 							</div>-->
 						</div>
@@ -216,7 +216,7 @@
 								<img src="img/uly_800.png" class="imgSquad">
 								<div class="descriptionSquad">
 									<h4>🇧🇬~Юлия🍷🖤~ (Баб Юля, Казинак)</h4>
-									<p>—<!--'"Саша Юля, Юля Саша"—так обычно мы звали их, и даже не которые думали, что они сёстра, но нет. Они очень разные. Вот эта ...(абсолютно, нет мыслей. Прости но я стобой не больно да общался)'--></p>
+									<p>—<!-'"Саша Юля, Юля Саша"—так обычно мы звали их, и даже не которые думали, что они сёстра, но нет. Они очень разные. Вот эта ...(абсолютно, нет мыслей. Прости но я стобой не больно да общался)'-></p>
 								</div>
 							</div>-->
 
