--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 							<img src="img/innaVasilievna_800.png" class="imgEducators">
 							<div class="descriptionEducators">
 								<h4>🇺🇦Инна Васильевна</h4>
-								<p>Наша воспитательница, которое сочинит стишок за один день и вообще целую сценку и отрывки для сценария, особенно это помогало нам во время всяких предстовлениях и выступлениях. Кстати она ведьма, она просто очень хороший воспитатель, что может с нами справиться.</p>
+								<p>Наша воспитательница, которое сочинит стишок за один день и вообще целую сценку и отрывки для сценария, особенно это помогало нам во время всяких предстовлениях и выступлениях. Кстати она не ведьма, она просто очень хороший воспитатель, что может справиться, с нами.</p>
 								<a href="https://vk.com/id480613732" target="_blank">VK</a>
 							</div>
 						</div>
