--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
 								</div>
 							</div>
 
-							<!--<div class="flex">
+							<div class="flex">
 								<img src="img/adelina_800.png" class="imgSquad">
 								<div class="descriptionSquad">
-									<h4>🇦🇽Ангелина (—)</h4>
-									<p>—<!-'Как и с Юлей.'-></p>
+									<h4>🇦🇽Ангелина (Очень горячая искарка)</h4>
+									<p>Есть солнышно, ну а это искарка. Весь нашь это искарки, но эта прям очнь большая. Если она заискрится, то так сильно, что похлеще ваших бенгальских огней. Но даже это искра согреет тебя и твою душу.<!--'Как и с Юлей.'--></p>
 								</div>
-							</div>-->
+							</div>
 						</div>
 
 
@@ -212,13 +212,13 @@
 								</div>
 							</div>
 
-							<!--<div class="flex">
+							<div class="flex">
 								<img src="img/uly_800.png" class="imgSquad">
 								<div class="descriptionSquad">
 									<h4>🇧🇬~Юлия🍷🖤~ (Баб Юля, Казинак)</h4>
-									<p>—<!-'"Саша Юля, Юля Саша"—так обычно мы звали их, и даже не которые думали, что они сёстра, но нет. Они очень разные. Вот эта ...(абсолютно, нет мыслей. Прости но я стобой не больно да общался)'-></p>
+									<p>"Саша Юля, Юля Саша"—так обычно мы звали их, и даже не которые думали, что они сёстра, но нет, они очень разные.<!--'Вот эта ...(абсолютно, нет мыслей. Прости но я стобой не больно да общался)'--></p>
 								</div>
-							</div>-->
+							</div>
 
 							<div class="flex">
 								<img src="img/stas_800.png" class="imgSquad">
