--- a/index.html
+++ b/index.html
@@ -193,13 +193,12 @@
 								</div>
 							</div>
 
-							<!--<div class="flex">
+							<div class="flex">
 								<img src="img/sasha_800.png" class="imgSquad">
 								<div class="descriptionSquad">
-									<h4>🇧🇪Саша✌ (Баба Саша или Баба Шура)</h4>
-									<p>—</p>
+									<p>Воительница за мыло, молоко и сердца жаб. Эта жертва мошенников Стаса и Максима пострадала и потелала целых 7 рублей за мыло которое ей так и недали. Также она всегда воевала с Максимом за пакетик молока</p>
 								</div>
-							</div>-->
+							</div>
 						</div>
 
 
