--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 							</div>
 
 							<div class="flex">
-								<img src="img/adelina_800.png" class="imgSquad">
+								<img src="img/angelina_800.png" class="imgSquad">
 								<div class="descriptionSquad">
 									<h4>🇦🇽Ангелина (Очень горячая искарка)</h4>
 									<p>Есть солнышно, ну а это искарка. Весь нашь это искарки, но эта прям очнь большая. Если она заискрится, то так сильно, что похлеще ваших бенгальских огней. Но даже это искра согреет тебя и твою душу.<!--'Как и с Юлей.'--></p>
@@ -196,6 +196,7 @@
 							<div class="flex">
 								<img src="img/sasha_800.png" class="imgSquad">
 								<div class="descriptionSquad">
+									<h4>🇧🇪Саша✌ (Баба Саша или Баба Шура)</h4>
 									<p>Воительница за мыло, молоко и сердца жаб. Эта жертва мошенников Стаса и Максима пострадала и потелала целых 7 рублей за мыло которое ей так и недали. Также она всегда воевала с Максимом за пакетик молока</p>
 								</div>
 							</div>
