--- a/index.html
+++ b/index.html
@@ -317,19 +317,21 @@
 
 
 		<footer>
-			<h2>Настройки</h2>
-			<p><button class="buttonShadow">Выключить тени у текста</button></p>
-			<p><button class="buttonBackground">Выключить фон</button></p>
-			<p><button class="buttonImg"></button></p>
+			<div>
+				<h2>Настройки</h2>
+				<p><button class="buttonShadow">Выключить тени у текста</button></p>
+				<p><button class="buttonBackground">Выключить фон</button></p>
+				<!--<p><button class="buttonImg"></button></p>-->
+			</div>
 
 			
-			<div>
+			<!--<div>
 				<h4>План:</h4>
 				<ol>
 					<li>-сделать настройки</li>
 					<li>-включение и выключение тени у текста и т.п.</li>
 				</ol>
-			</div>
+			</div>-->
 		</footer>
 		<script type="text/javascript" src="script.js"></script>
 	</body>
