--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css">
-		<title>Альтруисты</title>
+		<title>Альтруисты</title><!--icon itilWithBlackContour.jpg-->
 	</head>
 
 
@@ -318,14 +318,14 @@
 
 		<footer>
 			<div>
-				<h2>Настройки</h2>
+				<h2>Настройки у сайта</h2>
 				<p><button class="buttonShadow">Выключить тени у текста</button></p>
 				<p><button class="buttonBackground">Выключить фон</button></p>
 				<!--<p><button class="buttonImg"></button></p>-->
 			</div>
 
 			
-			<!--<div>
+		<!--<div>
 				<h4>План:</h4>
 				<ol>
 					<li>-сделать настройки</li>
